docs/7.57/md/abapoverlay.md
---
title: "OVERLAY"
description: |
  Short Reference(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapoverlay_shortref.htm) Syntax OVERLAY text1 WITH text2 ONLY mask. Effect Characters in the variable text1 are replaced by the characters in the operand text2 that are in the same place there. text2 is a characte
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapoverlay.htm"
abapFile: "abapoverlay.htm"
keywords: ["do", "if", "case", "try", "data", "abapoverlay"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) →  [Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_string.htm) →  [Statements for Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_processing_statements.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: OVERLAY, ABAPOVERLAY, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for imp
rovement:)

OVERLAY

[Short Reference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapoverlay_shortref.htm)

Syntax

OVERLAY text1 WITH text2 *\[*ONLY mask*\]*.

Effect

Characters in the variable text1 are replaced by the characters in the operand text2 that are in the same place there. text2 is a [character-like expression position](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencharlike_expr_position_glosry.htm "Glossary Entry").

If the addition ONLY is not specified, all blanks in text1 are replaced. If the addition ONLY is specified, all characters are replaced that occur in the operand mask. This is case-sensitive. mask is also a [character-like expression position](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencharlike_expr_position_glosry.htm "Glossary Entry").

If the lengths of text1 and text2 are different, text1 is processed using the shorter length only.

The operands text1, text2, and mask must be character-like operands. In operands of fixed length, trailing blanks are respected. If mask is an empty string, no replacements are made.

System Fields

sy-subrc

Meaning

0

At least one character in text1 has been replaced.

4

No characters in text1 have been replaced.

Example

After the text field has been assigned to the time field, it contains the invalid time 12\_\_00 due to the [conversion rules](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenconversion_type_c.htm). As a result of the overlay with the initial\_time constants, the two blanks are replaced by 00 and the result is the valid time 120000.

CONSTANTS initial\_time TYPE t VALUE IS INITIAL.
DATA: time TYPE t,
      text TYPE c LENGTH 4.
text = '12'.
time = text.
OVERLAY time WITH initial\_time.